# python-https-servers

./: README.md  generate-self-signed-cert.sh  gunicorn.conf.py  pyproject.toml  run-gunicorn-flask.sh  run-gunicorn.sh  run-python.sh
htdocs/: index.html
htdocs/css/: styles.css
with_gunicorn/: app.py
with_gunicorn_flask/: app.py
with_python/: server.py
