[tool.poetry]
name = "simple-https-server"
version = "0.1.0"
description = ""
authors = ["Goto Hayato <habita.gh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.0.4"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
